--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,15 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - name: Prepare for Yarn Installation
-        run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-      - name: install yarn
-        run: sudo apt update && sudo apt install yarn
-      - name: Build React App
-        run: yarn build
-      - name: Install Surge
+      - name: GitHub Action for Yarn
+        uses: Borales/actions-yarn@v3
+        with:
+             # Yarn command
+         cmd: install
+      
+      - name: Creating build 
+        run: npm run build
+      - name: installing Surge
         run: npm install -g surge
-      - name: Run surge
+      - name: deploying on surge
         run: surge ./build https://dummy_app.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
