--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
          cmd: install
       
       - name: Creating build 
-        run: npm run build
+        run: yarn build
       - name: installing Surge
         run: npm install -g surge
       - name: deploying on surge
